<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_key_press">Key press</string>
    <string name="settings_screen_appearance">Appearance</string>
    <string name="settings_screen_text_replacement">Replace Text</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="select_language">Languages</string>
    <string name="select_language_description" translatable="false">en_US:qwerty;en_US:qwertz;de:qwertz</string>
    <string name="pref_keyboard_color_description" translatable="false">#ECEFF1</string>
    <string name="locale_name_en_GB">English (UK)</string>
    <string name="locale_name_en_US">English (US)</string>
    <string name="locale_name_es_US">Spanish (US)</string>
    <string name="locale_name_hi_ZZ">Hinglish</string>
    <string name="locale_name_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_generic_layout"><xliff:g id="LANGUAGE_NAME" example="English (US)">%s</xliff:g> (<xliff:g id="LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_traditional">Traditional</string>
    <string name="subtype_compact">Compact</string>
    <string name="subtype_bds">BDS</string>
    <string name="subtype_q">Q</string>
    <string name="subtype_f">F</string>
    <string name="subtype_akkhor">Akkhor</string>
    <string name="subtype_ergol">Ergo-L</string>
    <string name="subtype_hcesar">HCESAR</string>
    <string name="keyboard_theme_dark_border" translatable="false">Material Dark Border</string>
    <string name="keyboard_theme_light_border" translatable="false">Material Light Border</string>
    <string name="keyboard_theme_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_light" translatable="false">Material Light</string>
    <string name="keyboard_theme_system" translatable="false">System Default</string>
    <string name="keyboard_theme_system_border" translatable="false">System Default Border</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="button_default">Default</string>
    <string translatable="false" name="abbreviation_unit_percent"><xliff:g id="PERCENTS">%s</xliff:g>%%</string>
    <string translatable="false" name="abbreviation_unit_dp"><xliff:g id="DENSITY_INDEPENDENT_PIXELS">%d</xliff:g> dp</string>
    <string name="prefs_keyboard_height_settings">Keyboard height</string>
    <string name="prefs_bottom_offset_portrait_settings">Bottom offset</string>
    <string name="keyboard_color">Set custom keyboard color</string>
    <string name="show_special_chars">Show special characters</string>
    <string name="show_language_switch_key">Show language switch key</string>
    <string name="pref_use_on_screen">Show on-screen keyboard</string>
    <string name="pref_use_on_screen_summary">Show on-screen keyboard while using physical keyboard</string>
    <string name="pref_enable_ime_switch">Switch to other keyboards</string>
    <string name="show_number_row">Show separate number row</string>
    <string name="space_swipe">Space swipe cursor move</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="text_replacement_enabled">Text replacement?</string>
    <string name="scan_button_enabled">Show scan button</string>
    <string name="scan_button_enabled_summary">Show button to scan and fix misspellings in typed text</string>
    <string name="long_press_for_numbers">Long press for numbers</string>
    <string name="setup_message">Simple Spellcheck is not enabled. Click OK to open Languages &amp; Input settings. You will need to select Simple Spellcheck in your current keyboard to use it.</string>
    <string name="user_languages">Enabled keyboard languages</string>
    <string name="add_language">Add language</string>
    <string name="remove_language">Remove language</string>
    <string name="generic_language_layouts"><xliff:g id="LANGUAGE_NAME" example="English (US)">%s</xliff:g> keyboard layouts</string>
    <string name="change_keyboard">Change keyboard</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="license">License</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="tr_header_sel">Sel</string>
    <string name="tr_header_misspell">Misspell</string>
    <string name="tr_header_correct">Correct</string>
    <string name="tr_header_auto">Auto</string>
    <string name="tr_button_export">Export</string>
    <string name="tr_button_search">Search</string>
    <string name="tr_hint_misspell">Misspell</string>
    <string name="tr_hint_correct">Correct</string>
    <string name="tr_menu_clear_counter">Clear counter</string>
    <string name="tr_menu_turn_off_counter">Turn off counter</string>
    <string name="tr_menu_turn_on_counter">Turn on counter</string>
    <string name="tr_menu_delete_unused">Delete unused</string>
    <string name="tr_menu_delete_selected">Delete selected</string>
    <string name="tr_menu_delete_all">Delete all</string>
    <string name="tr_upload_csv_title">Upload CSV File</string>
    <string name="tr_upload_csv_message">This will overwrite all current text replacement data. Are you sure you want to continue?</string>
    <string name="tr_yes_upload">Yes, Upload</string>
    <string name="tr_cancel">Cancel</string>
    <string name="tr_delete_all_title">Delete All Entries</string>
    <string name="tr_delete_all_message">This will permanently delete ALL text replacement entries. This action cannot be undone. Are you sure?</string>
    <string name="tr_delete_all_btn">Delete All</string>
    <string name="tr_delete_unused_title">Delete Unused</string>
    <string name="tr_delete_unused_message_one">Delete 1 entry that has never been used (counter = 0)?</string>
    <string name="tr_delete_unused_message_many">Delete %d entries that have never been used (counter = 0)?</string>
    <string name="tr_delete_btn">Delete</string>
    <string name="tr_no_unused_entries">No unused entries (counter 0) to delete</string>
    <string name="tr_clear_counters_title">Clear All Counters</string>
    <string name="tr_clear_counters_message">Reset all usage counters to zero?</string>
    <string name="tr_clear_btn">Clear</string>
    <string name="tr_saved_to_downloads">Saved to Downloads: %s</string>
    <string name="tr_failed_export">Failed to export: %s</string>
    <string name="tr_failed_share_csv">Failed to share CSV: %s</string>
    <string name="tr_select_csv_file">Select CSV File</string>
    <string name="tr_no_file_picker">No file picker available</string>
    <string name="tr_please_select_csv">Please select a CSV file</string>
    <string name="tr_failed_read_file">Failed to read file</string>
    <string name="tr_no_valid_entries">No valid entries found in CSV file</string>
    <string name="tr_imported_entries">Imported %d entries</string>
    <string name="tr_failed_import">Failed to import CSV: %s</string>
    <string name="tr_unused_deleted">Unused entries deleted</string>
    <string name="tr_failed_delete_unused">Failed to delete unused entries</string>
    <string name="tr_counters_cleared">Counters cleared</string>
    <string name="tr_failed_clear_counters">Failed to clear counters</string>
    <string name="tr_all_entries_deleted">All entries deleted</string>
    <string name="tr_failed_delete_all">Failed to delete all entries: %s</string>
    <string name="tr_no_matches_found">No matches found</string>
    <string name="tr_search_status_of">%1$d of %2$d</string>
    <string name="tr_search_title">Search</string>
    <string name="tr_enter_search_term">Enter search term</string>
    <string name="tr_previous">Previous</string>
    <string name="tr_next">Next</string>
    <string name="tr_share_csv_file">Share CSV File</string>
    <string name="tr_text_replacements_export">Text Replacements Export</string>
</resources>